# MegaExNotes

./: .gitignore  MegaExNotesSettings.sublime-project  README.md  main.py  notes.md  pyproject.toml
docs/source/: conf.py  index.rst
src/megaexnotes/: models.py
src/megaexnotes/core/: base.py  parser.py  utils.py
src/tests/: conftest.py  test_utils.py
