[project]
name = "MegaExNotes"
version = "0.1.0"
description = "Приложение для парсинга и анализа md файлов заметок"
authors = [
    { name = "RobertKano", email = "gotfreedeadlift@gmail.com" }
]
requires-python = ">=3.12"
license = { text = "GNU AGPLv3" }
readme = "README.md"
dependencies = [
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "ruff",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "audio",
    "map",
    "graphics",
    "venv",
]
fix = true
force-exclude = true

#target-version = "py313" # see [project].requires-python

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "tab"
line-ending = "lf"
quote-style = "single"
line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-select = [
    "C90",
    "I",
    "N",
    "A",
    "COM",
    #"DJ", # if using django
    "PIE",
    "PT",
    "Q",
    "SIM",
    "PLR",
]
ignore = [
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    "F401",
    "F403",
    "F405",
    "E741",
] # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.setuptools.packages.find]
where = ["src"]         # Это заставляет Python смотреть ВНУТРЬ папки src
include = ["megaexnotes*"] # Включаем только наш основной пакет
exclude = ["data*", "images*", "tests*"]    # Исключаем тесты из сборки самого пакета

[dependency-groups]
dev = [
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "pytest>=8.0.0",
]
